# pelam-fi-btrfs-snapshot-backup

./: .gitignore  README.md  backup_config.toml  backup_script.py  build.sh  fix_tests.py  pyproject.toml  update-test-references.sh
docs/: testing-approach.md
src/: __init__.py  config.py  snapshots.py
tests/: __init__.py  test_config.py  test_integration.py  test_utils.py
tests/references/: backup_no_snapshots_folder.txt  backup_no_snapshots_in_either.txt  backup_single_snapshot_in_both.txt  backup_single_snapshot_source_none_target.txt  backup_source_has_older_snapshots_missing_from_target.txt  backup_three_snapshots_source_one_target.txt  backup_two_snapshots_source_none_target.txt  purge_mixed_age_snapshots_only_old_removed.txt  purge_no_snapshots_folder.txt  purge_no_snapshots_in_either.txt  purge_single_old_snapshot_protected_by_count.txt  purge_three_old_snapshots_one_removed.txt  snapshot_all_pairs.txt  snapshot_single_pair.txt
